// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: medianExecutionTime, sortDesc: false) 1`] = `
[
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
]
`;

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: medianExecutionTime, sortDesc: true) 1`] = `
[
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
]
`;

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: sessionsCount, sortDesc: false) 1`] = `
[
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
]
`;

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: sessionsCount, sortDesc: true) 1`] = `
[
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
]
`;

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: usersCount, sortDesc: false) 1`] = `
[
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
]
`;

exports[`AI Agent platform flow metrics data source applies correct sorting for (sortBy: usersCount, sortDesc: true) 1`] = `
[
  {
    "completionRate": 88.3,
    "flowType": "TOOL_FLOW",
    "medianExecutionTime": 14.166666666666666,
    "sessionsCount": 203,
    "usersCount": 48,
  },
  {
    "completionRate": 92.5,
    "flowType": "AGENT_FLOW",
    "medianExecutionTime": 20.833333333333332,
    "sessionsCount": 145,
    "usersCount": 32,
  },
  {
    "completionRate": 95.1,
    "flowType": "CUSTOM_FLOW",
    "medianExecutionTime": 0,
    "sessionsCount": 87,
    "usersCount": 19,
  },
  {
    "completionRate": 95.1,
    "flowType": "BONUS_FLOW",
    "medianExecutionTime": null,
    "sessionsCount": 87,
    "usersCount": 19,
  },
]
`;

exports[`AI Agent platform flow metrics data source returns the flow metrics as nodes on success 1`] = `
{
  "nodes": [
    {
      "completionRate": 92.5,
      "flowType": "AGENT_FLOW",
      "medianExecutionTime": 20.833333333333332,
      "sessionsCount": 145,
      "usersCount": 32,
    },
    {
      "completionRate": 88.3,
      "flowType": "TOOL_FLOW",
      "medianExecutionTime": 14.166666666666666,
      "sessionsCount": 203,
      "usersCount": 48,
    },
    {
      "completionRate": 95.1,
      "flowType": "CUSTOM_FLOW",
      "medianExecutionTime": 0,
      "sessionsCount": 87,
      "usersCount": 19,
    },
    {
      "completionRate": 95.1,
      "flowType": "BONUS_FLOW",
      "medianExecutionTime": null,
      "sessionsCount": 87,
      "usersCount": 19,
    },
  ],
}
`;
